2008-09-29  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::updateGroups): using setSpan to
	make row holding rule group head span across all columns. Without
	this, clicking on table cell in column >1 caused visual
	artifacts (cell color would turn white, possibly erasing part of
	the group name).

	* FindWhereUsedWidget.cpp (FindWhereUsedWidget::showObject): fixed
	bug #2129726: "Where Used" not working on collapsed groups.

	* RuleSetView.cpp (RuleSetView::paintEvent): fixed bug related to
	#2123152 "Fwbuilder 3.0.0 Gui very slow and doesn't refresh
	properly". There seems to be a bug in QT 4.4.1 (not sure of 4.4.0,
	definitely not in 4.3.x) which causes the last row of the rule set
	view table to come out blank when the table is redrawn. This
	happens when rows have very different height and looks like the
	last row comes out blank when user scrolls the table up. The last
	row is finally redrawn when most of it is already visible.

2008-09-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* PolicyCompiler_pf_writers.cpp (PrintRule::_printAF): fixed
	bug (no #): policy compiler for PF used to insert both "inet" and
	"inet6" into generated pf.conf lines for the IPv6 policy.

	* RuleSetView.cpp (RuleSetView::getFullRuleGroupTitle): Added
	tooltip in the rule set view for the column showing rule group
	handle, the tooltip shows group name and number of rules.

2008-09-25  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallDialog.cpp (FirewallDialog::openFWDialog): fixed bug
	#2105977: "Viewing firewall settings change state to
	edited". Opening firewall "advanced" settings dialog triggered
	internal flag that signalled that something in the object tree has
	changed.

	* FWObject.cpp (FWObject::setInt): (change in libfwbuilder) fixed
	bug #2128261: "fwbuilder thinks the file has changed when opened
	read-only". Operation "find where used" triggered "dirty" flag on
	the object tree even though it does not change anything.
